[gd_scene load_steps=9 format=1]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://LSBt.tscn" type="PackedScene" id=2]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://QPF_assets/art/help.jpg" type="Texture" id=4]
[ext_resource path="res://QPF_assets/music/menu_music.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 124
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 96
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="MainMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
Lsbutton = ExtResource( 2 )

[node name="InitialMenu" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TitleLabel" type="Label" parent="InitialMenu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -87.0
margin/top = 71.0
margin/right = 800.0
margin/bottom = 374.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
text = "Quantum 
Penny Flip"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ExitButton" type="Button" parent="InitialMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 199.0
margin/top = 996.0
margin/right = 542.0
margin/bottom = 1118.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="HelpButton" type="Button" parent="InitialMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 201.0
margin/top = 805.0
margin/right = 542.0
margin/bottom = 927.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Help"
flat = false

[node name="LevelSelectButton" type="Button" parent="InitialMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 202.0
margin/top = 618.0
margin/right = 538.0
margin/bottom = 740.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="HelpSprite" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 1732.03, 641.599 )
transform/scale = Vector2( 1.33707, 1.33178 )
texture = ExtResource( 4 )

[node name="BackButton" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 1194.0
margin/right = 205.0
margin/bottom = 1278.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="LevelSelectMenu" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="MenuMusic" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="InitialMenu/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="InitialMenu/HelpButton" to="." method="_on_HelpButton_pressed"]

[connection signal="pressed" from="InitialMenu/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]


